--- a/src/app/app.module.css
+++ b/src/app/app.module.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 .appHeader {
-  background-color: #282c34;
+  /* background-color: #282c34; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
