--- a/src/app/app.module.css
+++ b/src/app/app.module.css
@@ -1,7 +1,7 @@
 .app {
   text-align: center;
 }
-.appHeader {
+.appBody {
   /* background-color: #282c34; */
   min-height: 100vh;
   display: flex;
